--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-bin/program
-bin/test
-*.o
+# VS to debug :')
 .vscode
+
+# CMake files
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+build/**/Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+build/**/Makefile
+build/libs/*
+build/**/*
+bin/**/*
+gmon.out
+*.log
